<resources>
    <string name="app_name">Widgets kotlin</string>
    <string name="radio_button_text1">Yes</string>
    <string name="radio_button_text2">No</string>
    <string name="radio_button_text3">Maybe</string>
    <string name="text_view_questions">Do you like programming?</string>
    <string name="text_view_text">Rate - 0</string>
    <string name="toggle_text">No</string>
    <string name="checkbox">Kotlin</string>
    <string name="checkbox1">Java</string>
    <string name="checkbox2">Dart</string>
</resources>